--- a/.github/workflows/build-rmac2100.yml
+++ b/.github/workflows/build-rmac2100.yml
@@ -125,7 +125,7 @@ jobs:
         if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
         run: |
           cd openwrt/bin/targets/*/*
-          tar -cvf packages.tar.gz
+          tar -cvf packages.tar.gz packages
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "::set-output name=status::success"
